syntax = "proto3";
package sgenetwork.sge.bet;

import "gogoproto/gogo.proto";

option go_package = "github.com/sge-network/sge/x/bet/types";

// Constraints is the bet constrains type for the bets
message Constraints {
  // min_amount is the minimum allowed bet amount.
  string min_amount = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // fee is the fee that the bettor needs to pay to bet.
  string fee = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // price_lock_fee_percent is the fee that the bettor needs to pay to enable price lock on the bet.
  string price_lock_fee_percent = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}