syntax = "proto3";
package sgenetwork.sge.bet;

import "gogoproto/gogo.proto";
import "sge/bet/constraints.proto";

option go_package = "github.com/sge-network/sge/x/bet/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // batch_settlement_count is the batch settlement bet count.
  uint32 batch_settlement_count = 1;
  // max_bet_by_uid_query_count is the maximum bet by uid query items count.
  uint32 max_bet_by_uid_query_count = 2;
  // constraints is the bet constraints.
  Constraints constraints = 3 [
    (gogoproto.moretags) = "yaml:\"constraints\"",
    (gogoproto.nullable) = false
  ];
  // min_price_lock_pool_balance is the minimum balance of price lock module account.
  string min_price_lock_pool_balance = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}
