
syntax = "proto3";
package sgenetwork.sge.bet;

import "gogoproto/gogo.proto";
import "sge/type/kyc.proto";
import "sge/bet/bet_odds.proto";
import "sge/bet/bet.proto";

option go_package = "github.com/sge-network/sge/x/bet/types";

// WagerTicketPayload indicates data of bet placement ticket.
message WagerTicketPayload {
  // selected_odds is the user-selected odds to place bet.
  BetOdds selected_odds = 1;
  // kyc_data contains the details of user kyc.
  sgenetwork.sge.type.KycDataPayload kyc_data = 2
      [ (gogoproto.nullable) = false ];
  // all odds for the selected market.
  repeated BetOddsCompact all_odds = 4;
  // meta is metadata for bet placement
  MetaData meta = 5 [ (gogoproto.nullable) = false ];
  // context contains the data from services and just for processing purpose.
  string context = 6;
  // sge_price is the price of sge token in dollars.
  string sge_price = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
